# lab08

./: CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  Dockerfile  LICENSE  README.md
.github/workflows/: docker.yml  release.yml
demo/: main.cpp
